--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
   <body>
     <h1>Demo for my HCI class</h1>
+     <a href="css_demo.html">This is a link to the demo file</a>
     <p>This is a sample web page that links github to heroku for pure Awesomeness</p>
     </body>
   </html>
