--- a/font-sample.html
+++ b/font-sample.html
@@ -1,1 +1,6 @@
-
+<!DOCTYPE html>
+<html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ballet&family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
+  </html>
