--- a/font-sample.html
+++ b/font-sample.html
@@ -1,6 +1,11 @@
-<!DOCTYPE html>
+
+  <!DOCTYPE html>
 <html>
-  <h1>Christine Hong was dealing with some physical/mental blockers this quarter
+  <head>
+    <title>Demo webpage!</title>
     <link href="https://fonts.googleapis.com/css2?family=Ballet&family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
-  </h1>
+    </head>
+  <body>
+    <h1>Demo for my HCI class</h1>
+    </body>
   </html>
