--- a/font-sample.html
+++ b/font-sample.html
@@ -3,9 +3,11 @@
 <html>
   <head>
     <title>Demo webpage!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Ballet&family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
+    <<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
   <body>
-    <h1>Demo for my HCI class</h1>
+    <h1 id="word">christine hong had some mental and physical troubles this quarter</h1>
     </body>
   </html>
