--- a/font-sample.html
+++ b/font-sample.html
@@ -3,7 +3,8 @@
 <html>
   <head>
     <title>Demo webpage!</title>
-    <<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel='stylesheet' href='css_demo.html'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
