--- a/font-sample.html
+++ b/font-sample.html
@@ -7,6 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
   <body>
-    <p>christine hong had some mental and physical troubles this quarter</p>
+    <p style= "font-family: Roboto;">christine hong had some mental and physical troubles this quarter</p>
     </body>
   </html>
