--- a/font-sample.html
+++ b/font-sample.html
@@ -5,8 +5,10 @@
     <title>Demo webpage!</title>
     <link rel='stylesheet' href='css_demo.html'>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     </head>
   <body>
+    <h1 style="font-family: 'Space Mono', monospace;"> christine hong had some mental and physical troubles this quarter</h1>
     <p style= "font-family: Roboto;">christine hong had some mental and physical troubles this quarter</p>
     </body>
   </html>
