--- a/font-sample.html
+++ b/font-sample.html
@@ -6,9 +6,11 @@
     <link rel='stylesheet' href='css_demo.html'>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ballet&display=swap" rel="stylesheet">
     </head>
   <body>
     <h1 style="font-family: 'Space Mono', monospace;"> christine hong had some mental and physical troubles this quarter</h1>
+    <h2 style="font-family: 'Ballet', cursive;"> but she really loves coding</h1>
     <p style= "font-family: Roboto;">christine hong had some mental and physical troubles this quarter</p>
     </body>
   </html>
