--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Demo for my HCI class</h1>
      <p><a href="css_demo.html">This is a link to the demo file</a></p>
      <p><a href="font-sample.html">This is a link to the font-sample</a></p>
+     <p><a href="bootstrap-sample.html">This is a link to the bootstrap sample</a></p>
     <p>This is a sample web page that links github to heroku for pure Awesomeness</p>
     </body>
   </html>
