--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -19,11 +19,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     
-   <div class="threebox">
-     <style> div .threebox {
+ <style> 
+   div.threebox {
        border: 1px solid black;
        }
        </style>
+    
+   <div class="threebox">
     <p>beep</p>
   </div>
    <div class="threebox">
