--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -42,15 +42,15 @@
        </style>
  
 <div class="row">
-   <div class="threebox">
-    <p>beep</p>
+   <div class="col">
+    beep
+   </div>
+   <div class="col">
+    boop
   </div>
- </div>
-   <div class="threebox">
-    <p>boop</p>
+  <div class="col">
+    bop
   </div>
-  <div class="threebox">
-    <p>bop</p>
   </div>
     
     
