--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -17,6 +17,11 @@
         text-align:center;
          }
        </style>
+            <style>
+        p {
+        text-align:center;
+         }
+       </style>
     <h1>Hello, Christine's world</h1>
     <p>I love coding and am sharing my coding experience here</p>
   </div>
