--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,12 +14,14 @@
     <div class="welcome">
       <style>
         h1 {
+        color: #DBE9EE;
         text-align:center;
          }
        </style>
             <style>
         p {
-        text-align:center;
+        color: #DBE9EE;
+         text-align:center;
          }
        </style>
     <h1>Hello, Christine's world</h1>
@@ -32,6 +34,7 @@
     
  <style> 
    div.col {
+     background-color: color: #DBE9EE;
        border: 1px solid black;
        }
        </style>
