--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -34,7 +34,7 @@
     
  <style> 
    div.col {
-     background-color: color: #DBE9EE;
+     background-color: #DBE9EE;
        border: 1px solid black;
        }
        </style>
