--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -51,9 +51,11 @@
   </div>
   </div>
     
-    
-    <div class="col-ch">
-      <img class="resp-img" src="" alt="profile picture of christine">
-    </div>
+ <div class="respimg">
+    <h2>A favorite snack</h2>
+    <img class="img" src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fgrapee.jp%2Fen%2Fwp-content%2Fuploads%2FUntitled-2021-06-30T070721.599.jpg&tbnid=ABmX_J58D78HJM&vet=12ahUKEwj-ybWiscv_AhWpOFkFHRtfDwUQMygGegUIARDVAQ..i&imgrefurl=https%3A%2F%2Fgrapee.jp%2Fen%2F176920&docid=Qn4bXT8pcxsUEM&w=1200&h=900&q=japanese%20canele&ved=2ahUKEwj-ybWiscv_AhWpOFkFHRtfDwUQMygGegUIARDVAQ" alt="japanese canele"/>
+  </div>
+
   </body>
 </html>
+
