--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -38,17 +38,21 @@
        border: 1px solid black;
        }
        </style>
- 
-<div class="row">
-   <div class="col">
-     <div class="beep">
-     <style>
-      beep:hover {
+ <style>
+     div.beep:hover {
   background: #C0D6DF;
   color: #FFF;
 }
+   </style>
+     <style>
+     div.img {
+  width: 300px
+}
+   </style>
+ 
+<div class="row">
+   <div class="col">
      beep
-       </style>
    </div>
    <div class="col">
     boop
