--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -44,16 +44,19 @@
   color: #FFF;
 }
    </style>
- 
-<div class="row">
+<div class="threeboxes"> 
+<div class="row1">
    <div class="col">
      beep
    </div>
    <div class="col">
     boop
   </div>
+  </div>
+  <div class="row2">
   <div class="col">
     bop
+  </div>
   </div>
   </div>
     
