--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -33,7 +33,13 @@
    
     
  <style> 
-   div.col {
+   div.row1 {
+     background-color: #DBE9EE;
+       border: 1px solid black;
+       }
+       </style>
+    <style> 
+   div.row2 {
      background-color: #DBE9EE;
        border: 1px solid black;
        }
