--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -45,9 +45,8 @@
        }
        </style>
  <style>
-     div.beep:hover {
+     div.threeboxes:hover {
   background: #C0D6DF;
-  color: #FFF;
 }
    </style>
 <div class="threeboxes"> 
