--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -33,32 +33,29 @@
    
     
  <style> 
-   div.row1 {
+   div.col {
      background-color: #DBE9EE;
        border: 1px solid black;
        }
        </style>
     <style> 
-   div.row2 {
-     background-color: #DBE9EE;
-       border: 1px solid black;
-       }
-       </style>
+
  <style>
-     div.threeboxes:hover {
+     div.threeboxes: hover {
   background: #C0D6DF;
 }
    </style>
+    
 <div class="threeboxes"> 
-<div class="row1">
-   <div class="col">
+  <div class="row1">
+    <div class="col">
      beep
    </div>
-   <div class="col">
+    <div class="col">
     boop
   </div>
   </div>
-  <div class="row2">
+ <div class="row2">
   <div class="col">
     bop
   </div>
