--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -38,7 +38,12 @@
        border: 1px solid black;
        }
        </style>
-    <style> 
+     <style> 
+   div.threeboxes {
+     background-color: #DBE9EE;
+       border: 1px solid black;
+       }
+       </style>
 
  <style>
      div.threeboxes: hover {
