--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -39,11 +39,6 @@
        }
        </style>
      <style> 
-   div.threeboxes {
-     background-color: #DBE9EE;
-       border: 1px solid black;
-       }
-       </style>
 
  <style>
      div.threeboxes: hover {
@@ -64,6 +59,20 @@
   <div class="col">
     bop
   </div>
+  </div>
+  </div>
+    
+  <div class="row1">
+    <div class="col">
+     beep
+   </div>
+    <div class="col">
+    boop
+  </div>
+  </div>
+ <div class="row2">
+  <div class="col">
+    bop
   </div>
   </div>
     
