--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -76,6 +76,17 @@
   </div>
   </div>
     
+
+    <div class="col">
+     beep
+   </div>
+    <div class="col">
+    boop
+  </div>
+  <div class="col">
+    bop
+  </div>
+    
  <div class="respimg">
     <p>A favorite snack</p>
    <a href= "https://katnsatoshiinjapan.blogspot.com/2013/02/canele-du-japon.html" target="_blank">
